<resources>
    <string name="app_name">NewsApplication</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_signin">SignIn</string>
    <string name="txt_please_sign_in_to_continue">Please Sign In to Continue</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_forgot_password">Forgot Password ?</string>
    <string name="txt_qa">You have any account ?</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_Qa">Don’t have an account?</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_sub_title">Please fill the input below here</string>
    <string name="txt_name">Name</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="image_view">Image View</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="language">Language</string>
    <string name="bookmark">Bookmark</string>
    <string name="logout">Logout</string>
    <string name="change_account">Change Account</string>
    <string name="setting">Setting</string>
    <string name="privacy_and_setting_help">Privacy and Setting Help</string>
    <string name="nathania_slavi">Nathania Slavi</string>
    <string name="nathania_gmail_com">nathania@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="notification">Notification</string>
    <string name="please_fill_the_input_below_here">Please fill the input below here</string>
    <string name="date">9 Feb, 2021</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="breaking_news">Breaking News</string>
    <string name="highlight">Contact Lost With Sriwijaya Air Boeing 737-500 After Take Off</string>
    <string name="all">All</string>
    <string name="international">International</string>
    <string name="media">Media</string>
    <string name="magazine">Magazine</string>
    <string name="business">Business</string>
    <string name="title_items">An Illinois town fights to save its power plant</string>
    <string name="dummy_tgl">1 July 2022</string>
    <string name="dummy_duration">10 Min Read</string>
    <string name="floating_button">Floating Button</string>
    <string name="content_desc">A search is underway after suspected debris from an Indonesian Sriwijaya Air flight was found hours after the plane went missing. The plane lost contact after taking off from Indonesian capital Jakarta on Saturday en route to the city of Pontianak in West Kalimantan province. The Boeing 737-500 flight was carrying 62 people.The 50 passengers included seven children and three babies.</string>
    <string name="txt_forget_password">Forget Password</string>
</resources>